--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <Folder Include="DataAccess\" />
   </ItemGroup>
 
 </Project>
